--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>Jeff Winchester</h1>
+    <h1>Jeff Winchestar</h1>
     <p>
 
       <img src="Picture.png" img width="200" img height="200">
