--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <div>
-      <h4>Summary</h4>
+      <h4 id="summary" >Summary</h4>
       <p>
         Jeff studied at the University of Texas at Austin, where he proved himself a brilliant chemist with a specialty in X-ray crystallography. In 1985, Walt's groundbreaking research regarding photon radiography contributed to a project that was awarded the Nobel Prize in Chemistry, awarded jointly to Herbert A. Hauptman and Jerome Karle for outstanding achievements in the development of direct methods for the determination of crystal structures. Following his education, Walter went on to co-found Gray Matter Technologies with his friend, Elliott Schwartz. He now lives in Albuquerque with his family and owns A1A Car Wash.
       </p>
@@ -42,14 +42,14 @@
       </div>
     </div>
     <div>
-      <h4>Skills</h4>
+      <h4 class="skills-and-hobbies">Skills</h4>
       <ul>
         <li>Business</li>
         <li>More business</li>
       </ul>
     </div>
     <div>
-      <h4>Hobbies</h4>
+      <h4 class="skills-and-hobbies">Hobbies</h4>
       <ul>
         <li>Cooking</li>
       </ul>
