--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Jeff Winchestar</h1>
     <p>
 
-      <img src="Picture.png" img width="200" img height="200">
+      <img id="pic" src="Picture.png">
 
     </p>
     <h2>Implementation Manager</h2>
