Start Week 2 project

--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Buyflix</title>
+    <title>Page2</title>
     <!-- Bootstrap and jQuery -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -44,8 +44,11 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="page2.html">Page2</a></li>
-                <li><a href="page3.html">Page3</a></li>
+                <li><a href="#">Comedy</a></li>
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Kids</a></li>
+                <li><a href="#">Horror</a></li>
+                <li><a href="#">Drama</a></li>
               </ul>
             </li>
           </ul>
@@ -71,7 +74,7 @@
 
       <div class="row">
         <div class="col-md-2 text-center">
-          <p><img src="poster.jpg" </p>
+          <p><img src="C:\Users\jeffg\Documents\School\KIEI 924\Code\Project 1\jeffgwinchester7.github.io\poster.jpg" </p>
           <p><a href="#" class="btn btn-sm btn-success"><i class="fa fa-shopping-cart"></i> $14.99 Buy in HD</a></p>
           <p><strong>Genre:</strong> Action</p>
           <p><strong>Released:</strong> 2014</p>
