--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       </a>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="page2.html">Venue</a></li>
-                        <li><a href="page3.html">Where to Stay</a></li>
+                        <li><a href="page3.html">Hotels</a></li>
                       </ul>
                     </li>
 
