--- a/index-old.html
+++ b/index-old.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CJ & JW</title>
+
     <!-- Bootstrap and jQuery -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/f9001c39ac.js"></script>
+
     <!-- My own styles -->
     <link rel="stylesheet" href="stylesheets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
   </head>
+
 
   <body>
     <div class="container">
@@ -46,7 +49,7 @@
                 Logistics
                 <span class="caret"></span>
               </a>
-              <ul class="dropdown-menu dropdown-right" role="menu">
+              <ul class="dropdown-menu" role="menu">
                 <li><a href="page2.html">Venue</a></li>
                 <li><a href="page3.html">Where to Stay</a></li>
               </ul>
