--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="page2.html">Venue</a></li>
-                        <li><a href="page3.html">Hotels</a></li>
+                        <li><a href="venue.html">Venue</a></li>
+                        <li><a href="where-to-stay.html">Where to stay</a></li>
                       </ul>
                     </li>
 
