--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Buyflix</a>
+          <a class="navbar-brand" href="#">CJ & JW</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
