--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CJ & JW</a>
+                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>  CJ & JW</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -50,8 +50,8 @@
                     </li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                        <i class="fa fa-film"></i>
                         Logistics
+
                         <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu" role="menu">
@@ -70,7 +70,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-lg-6 col-lg-12">
                 <h1>The Big Picture</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
             </div>
