--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-lg-12">
-                <h1>The Big Picture</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+                <h1>Jeff & CJ</h1>
+                <p>October 28th, 2017</p>
             </div>
         </div>
         <!-- /.row -->
