--- a/wedding-party.html
+++ b/wedding-party.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>  CJ & JW</a>
+                <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>  CJ & JW</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,64 +73,102 @@
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 class="page-header">Bridesmaids</h2>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="https://s30.postimg.org/ewk46gu9t/tara.jpg" alt="">
+                <h3>Tara Eddins
+                    <small>Maid of Honor</small>
+                </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="https://s23.postimg.org/rlrexfrxn/kelly.jpg" alt="">
+                <h3>Kelly Speed
+                    <small>Bridesmaid</small>
+                </h3>
+
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="https://s29.postimg.org/s598abgdz/kerry.jpg" alt="">
+                <h3>Kerry Miller
+                    <small>Bridesmaid</small>
+                </h3>
+
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <h3>Steph Auge
+                    <small>Bridesmaid</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <h3>Christina Nguyen
+                    <small>Bridesmaid</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
-            </div>
-            <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+
             </div>
         </div>
 
+        <!-- Team Members Row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">Groomsmen</h2>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="https://s30.postimg.org/ewk46gu9t/tara.jpg" alt="">
+                <h3>Robert Boyd
+                    <small>Best Man</small>
+                </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="https://s23.postimg.org/rlrexfrxn/kelly.jpg" alt="">
+                <h3>Josh Bowe
+                    <small>Groomsman</small>
+                </h3>
+
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="https://s29.postimg.org/s598abgdz/kerry.jpg" alt="">
+                <h3>Alex Riegelman
+                    <small>Groomsman</small>
+                </h3>
+
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <h3>Will Campbell
+                    <small>Groomsman</small>
+                </h3>
+
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <h3>Evan Elder
+                    <small>Groomsman</small>
+                </h3>
+
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <h3>Patrick Ledwig
+                    <small>Groomsman</small>
+                </h3>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+                    <img class="img-circle img-responsive img-center" src="https://s30.postimg.org/ewk46gu9t/tara.jpg" alt="">
+                    <h3>Ken Merrit
+                        <small>Groomsman</small>
+                    </h3>
+            </div>
+
+        </div>
+    </div>
+
+
         <hr>
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-        </footer>
 
     </div>
     <!-- /.container -->
