--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>CJ & JW</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
