--- a/venue.html
+++ b/venue.html
@@ -13,7 +13,7 @@
     <title>Venue</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-lg-6 col-lg-12">
                 <h1>The Greenhouse at Driftwood</h1>
-      
+
             </div>
         </div>
         <!-- /.row -->
