--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -13,7 +13,7 @@
     <title>Where to Stay</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-lg-6 col-lg-12">
                 <h1>Hotel Van Zandt</h1>
-              
+
             </div>
         </div>
         <!-- /.row -->
