--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
+    <!-- Styles CSS -->
+    <link href="style.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
 
