--- a/wedding-party.html
+++ b/wedding-party.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
+    <!-- Styles CSS -->
+    <link href="style.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/round-about.css" rel="stylesheet">
     <link href="css/the-big-picture.css" rel="stylesheet">
