--- a/wedding-party.html
+++ b/wedding-party.html
@@ -18,15 +18,7 @@
     <link href="style.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/round-about.css" rel="stylesheet">
     <link href="css/the-big-picture.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -73,7 +65,7 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Team Members Row -->
+        <!-- Bridesmaids -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Bridesmaids</h2>
@@ -114,7 +106,7 @@
             </div>
         </div>
 
-        <!-- Team Members Row -->
+        <!-- Groomsmen -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Groomsmen</h2>
