--- a/wedding-party.html
+++ b/wedding-party.html
@@ -64,37 +64,37 @@
 
         <!-- Bridesmaids -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <h2 class="page-header">Bridesmaids</h2>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s30.postimg.org/ewk46gu9t/tara.jpg" alt="">
                 <h3>Tara Eddins
                     <small>Maid of Honor</small>
                 </h3>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s23.postimg.org/rlrexfrxn/kelly.jpg" alt="">
                 <h3>Kelly Speed
                     <small>Bridesmaid</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s29.postimg.org/s598abgdz/kerry.jpg" alt="">
                 <h3>Kerry Miller
                     <small>Bridesmaid</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/ujmwti0tv/steph.jpg" alt="">
                 <h3>Steph Auge
                     <small>Bridesmaid</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/5evwg31df/tina.jpg" alt="">
                 <h3>Christina Nguyen
                     <small>Bridesmaid</small>
@@ -105,50 +105,50 @@
 
         <!-- Groomsmen -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
                 <h2 class="page-header">Groomsmen</h2>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/dulgxl48j/robert.jpg" alt="">
                 <h3>Robert Boyd
                     <small>Best Man</small>
                 </h3>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/9hic1f643/josh.jpg" alt="">
                 <h3>Josh Bowe
                     <small>Groomsman</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/5il4ilhgz/alex.jpg" alt="">
                 <h3>Alex Riegelman
                     <small>Groomsman</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/8n0dt4nn7/will.jpg" alt="">
                 <h3>Will Campbell
                     <small>Groomsman</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/hyhuccasz/evan.jpg" alt="">
                 <h3>Evan Elder
                     <small>Groomsman</small>
                 </h3>
 
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/6pz2at7lf/patrick.jpg" alt="">
                 <h3>Patrick Ledwig
                     <small>Groomsman</small>
                 </h3>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center">
+            <div class="col-md-4 col-md-6 text-center">
                     <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/c04123rub/ken.jpg" alt="">
                     <h3>Ken Merrit
                         <small>Groomsman</small>
