--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-lg-12">
+            <div class="col-md-6 col-md-12">
                 <h1>Jeff & CJ</h1>
                 <p>October 28th, 2017</p>
             </div>
