--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- Styles CSS -->
     <link href="style.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+
 
 </head>
 
