--- a/wedding-party.html
+++ b/wedding-party.html
@@ -17,6 +17,9 @@
     <!-- Styles CSS -->
     <link href="style.css" rel="stylesheet">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -109,7 +112,7 @@
                 <h2 class="page-header">Groomsmen</h2>
             </div>
             <div class="col-md-4 col-md-6 text-center">
-                <img class="img-circle img-responsive img-center" src="https://s27.postimg.org/dulgxl48j/robert.jpg" alt="">
+                <img class="img-circle img-responsive img-center" src="https://s28.postimg.org/aoaymt7bx/boyd.jpg" alt="">
                 <h3>Robert Boyd
                     <small>Best Man</small>
                 </h3>
