--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-md-6 col-md-12">
                 <h1>Jeff & CJ</h1>
-                <p>October 28th, 2017</p>
+                <p id="date">October 28th, 2017</p>
             </div>
         </div>
         <!-- /.row -->
