--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -20,7 +20,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -68,6 +68,7 @@
         <div class="row">
             <div class="col-lg-6 col-lg-12">
                 <h1>Hotel Van Zandt</h1>
+                  <a class="btn btn-default btn-xs" id="logisticsbutton"  href="http://www.hotelvanzandt.com/" role="button">Venue website</a>
 
             </div>
         </div>
