--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span>  CJ & JW</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                       <a href="wedding-party.html">Wedding Party</a>
