--- a/venue.html
+++ b/venue.html
@@ -66,7 +66,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-lg-12">
+            <div class="col-md-6 col-md-12">
                 <h1>The Greenhouse at Driftwood</h1>
                   <a class="btn btn-default btn-xs" id="logisticsbutton" href="http://www.thegreenhousedriftwood.com/" role="button">Venue website</a>
 
