--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -66,7 +66,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-lg-12">
+            <div class="col-md-6 col-md-12">
                 <h1>Hotel Van Zandt</h1>
                   <a class="btn btn-default btn-xs" id="logisticsbutton"  href="http://www.hotelvanzandt.com/" role="button">Venue website</a>
 
