--- a/wedding-party.html
+++ b/wedding-party.html
@@ -19,7 +19,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -63,7 +63,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" id="aboutopacity">
 
         <!-- Bridesmaids -->
         <div class="row">
