--- a/wedding-party.html
+++ b/wedding-party.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body id="aboutopacity">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
@@ -63,7 +63,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container" id="aboutopacity">
+    <div class="container">
 
         <!-- Bridesmaids -->
         <div class="row">
