--- a/where-to-stay.html
+++ b/where-to-stay.html
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-md-6 col-md-12">
                 <h1>Hotel Van Zandt</h1>
-                  <a class="btn btn-default btn-xs" id="logisticsbutton"  href="http://www.hotelvanzandt.com/" role="button">Venue website</a>
+                  <a class="btn btn-default btn-xs" id="logisticsbutton"  href="http://www.hotelvanzandt.com/" role="button">Hotel website</a>
 
             </div>
         </div>
