--- a/venue.html
+++ b/venue.html
@@ -42,18 +42,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                      <a href="wedding-party.html">Wedding Party</a>
+                      <a href="venue.html">Venue</a>
                     </li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                        Logistics
-
-                        <span class="caret"></span>
-                      </a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="venue.html">Venue</a></li>
-                        <li><a href="where-to-stay.html">Where to stay</a></li>
-                      </ul>
+                    <li>
+                      <a href="logistics.html">Logistics</a>
                     </li>
 
                 </ul>
