--- a/logistics.html
+++ b/logistics.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="full" lang="en">
+<html class="fulllogistics" lang="en">
 
 
 <head>
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CJ & JW</title>
+    <title>Logistics</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -20,7 +20,6 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-
 
 </head>
 
@@ -57,13 +56,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-12">
-                <h1>Jeff & CJ</h1>
-                <p>October 28th, 2017</p>
-            </div>
-        </div>
+  
         <!-- /.row -->
     </div>
     <!-- /.container -->
